minio/console-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-console
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio-console
  template:
    metadata:
      labels:
        app: minio-console
    spec:
      containers:
        - name: console
          image: ghcr.io/georgmangold/console:v1.9.1
          ports:
            - containerPort: 9090
              name: http
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: 512Mi
              cpu: 500m
