minio/console-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-console
  annotations:
    argocd.argoproj.io/sync-wave: "25"
spec:
  selector:
    app: minio-console
  ports:
    - name: http
      port: 9090
      targetPort: 9090
