minio/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  selector:
    app: minio
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: minio-console
spec:
  selector:
    app: minio-console
  ports:
    - name: http
      port: 9090
      targetPort: 9090
