minio/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-api
  namespace: infra
  annotations:
    argocd.argoproj.io/sync-wave: "30"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - s3.lowjungxuan.dpdns.org
      secretName: minio-api-tls
  rules:
    - host: s3.lowjungxuan.dpdns.org
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: minio
                port:
                  number: 9000
